--- a/products.html
+++ b/products.html
@@ -324,7 +324,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>ARABIC</h2>
-                            <h2>EXAMINATIONS</h2>
+                            <h2>PRODUCTS</h2>
                         </div>
                     </div>
                 </div>
@@ -336,7 +336,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>KGSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -369,7 +369,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>PRISS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -401,7 +401,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>PRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -434,7 +434,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>SECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -467,7 +467,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>KGPRISS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -500,7 +500,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>PRIPRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -532,7 +532,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>PRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -565,7 +565,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>KGPRIPRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -597,7 +597,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>PRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -630,7 +630,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>KGPRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -662,7 +662,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>INSTITUTES SYSTEMS</p>
+                                <p>INSTITUTES PRODUCTS</p>
                                 <h3>AIS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -695,7 +695,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>UNIVERSITIES SYSTEMS</p>
+                                <p>UNIVERSITIES PRODUCTS</p>
                                 <h3>AUS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -727,7 +727,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>MINISTRY SYSTEMS</p>
+                                <p>MINISTRY PRODUCTS</p>
                                 <h3>EMIS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -763,7 +763,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>ENGLISH</h2>
-                            <h2>EXAMINATIONS</h2>
+                            <h2>PRODUCTS</h2>
                         </div>
                     </div>
                 </div>
@@ -775,7 +775,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>KGSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -808,7 +808,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>PRISS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -840,7 +840,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>PRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -873,7 +873,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>SECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -906,7 +906,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>KGPRISS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -939,7 +939,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>PRIPRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -971,7 +971,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>PRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1004,7 +1004,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>KGPRIPRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1036,7 +1036,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>PRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1069,7 +1069,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS PRODUCTS</p>
                                 <h3>KGPRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1101,7 +1101,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>INSTITUTES SYSTEMS</p>
+                                <p>INSTITUTES PRODUCTS</p>
                                 <h3>AIS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1134,7 +1134,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>UNIVERSITIES SYSTEMS</p>
+                                <p>UNIVERSITIES PRODUCTS</p>
                                 <h3>AUS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1166,7 +1166,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>MINISTRY SYSTEMS</p>
+                                <p>MINISTRY PRODUCTS</p>
                                 <h3>EMIS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1198,6 +1198,8 @@
             </div>
 
         </div>
+
+
 
 
 
