--- a/products.html
+++ b/products.html
@@ -75,9 +75,9 @@
                                                 </li>
                                                 <li><a href="services.html">SERVICES</a>
                                                     <ul class="submenu">
-                                                        <li><a href="services.html">MAANDEEQ SUBCRIPTIONS</a></li>
-                                                        <li><a href="arabic_services.html">ARABIC SUBCRIPTIONS</a></li>
-                                                        <li><a href="english_services.html">ENGLISH SUBCRIPTIONS</a></li>
+                                                        <li><a href="services.html">MAANDEEQ PRODUCTS</a></li>
+                                                        <li><a href="arabic_services.html">ARABIC PRODUCTS</a></li>
+                                                        <li><a href="english_services.html">ENGLISH PRODUCTS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="products.html">PRODUCTS</a>
@@ -353,7 +353,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -386,7 +386,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -418,7 +418,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -451,7 +451,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -484,7 +484,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -517,7 +517,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -549,7 +549,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -582,7 +582,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -614,7 +614,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -647,7 +647,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -679,7 +679,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -712,7 +712,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -744,7 +744,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -792,7 +792,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -825,7 +825,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -857,7 +857,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -890,7 +890,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -923,7 +923,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -956,7 +956,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -988,7 +988,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1021,7 +1021,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1053,7 +1053,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1086,7 +1086,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1118,7 +1118,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1151,7 +1151,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1183,7 +1183,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub>/SUBCRIPTIONS</sub></h3>
+                                        <h3 class="pricing-price"><sup></sup>200<sub>/PRODUCTS</sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
