--- a/products.html
+++ b/products.html
@@ -1219,7 +1219,7 @@
         
     </main>
     <footer>
-        <div class="footer-wrappper footer-bg">
+        <div class="footer-wrappper footer-bg ">
            <!-- Footer Start-->
            <div class="footer-area footer-padding">
                <div class="container">
@@ -1234,9 +1234,7 @@
                                    <div class="footer-tittle">
                                        <div class="footer-pera">
                                            <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;font-size: medium;">
-                                               EMIS is the best tool to manage educational institutions
-                                               efficiently and effectively. EMIS provide quality education
-                                               system.
+                                               ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                            </p>
                                        </div>
                                    </div>
@@ -1255,15 +1253,15 @@
                            <div class="single-footer-caption mb-50">
                                <div class="footer-tittle">
                                    <h4>SCHOOLS</h4>
-                                   <ul>
-                                       <li><a href="schools.examinations.html">Examinations</a></li>
-                                       <li><a href="schools.systems.html">Systems</a></li>
-                                       <li><a href="schools_services.html">Services</a></li>
-                                       <li><a href="schools_products.html">Products</a></li>
-                                       <li><a href="schools_users.html">Users</a></li>
-                                       <li><a href="schools_supervisors.html">Supervisors</a></li>
-                                       <li><a href="schools_teachers.html">Teachers</a></li>
-                                       <li><a href="schools_students.html">Students</a></li>
+                                   <ul> 
+                                       <li><a href="schools.examinations.html">EXAMINATIONS</a></li>
+                                       <li><a href="schools.systems.html">SYSTEMS</a></li>
+                                       <li><a href="schools_services.html">SERVICES</a></li>
+                                       <li><a href="schools_products.html">PRODUCTS</a></li>
+                                       <li><a href="schools_users.html">USERS</a></li>
+                                       <li><a href="schools_supervisors.html">SUPERVISORS</a></li>
+                                       <li><a href="schools_teachers.html">TEACHERS</a></li>
+                                       <li><a href="schools_students.html">STUDENTS</a></li>
                                    </ul>
                                </div>
                            </div>
@@ -1272,15 +1270,15 @@
                            <div class="single-footer-caption mb-50">
                                <div class="footer-tittle">
                                    <h4>INSTITUTES</h4>
-                                   <ul>
-                                    <li><a href="institutes.examinations.html">Examinations</a></li>
-                                    <li><a href="institutes.systems.html">Systems</a></li>
-                                    <li><a href="institutes_services.html">Services</a></li>
-                                    <li><a href="institutes_products.html">Products</a></li>
-                                    <li><a href="institutes_users.html">Users</a></li>
-                                    <li><a href="institutes_supervisors.html">Supervisors</a></li>
-                                    <li><a href="institutes_teachers.html">Teachers</a></li>
-                                    <li><a href="institutes_students.html">Students</a></li>
+                                   <ul> 
+                                       <li><a href="institutes.examinations.html">EXAMINATIONS</a></li>
+                                       <li><a href="institutes.systems.html">SYSTEMS</a></li>
+                                       <li><a href="institutes_services.html">SERVICES</a></li>
+                                       <li><a href="institutes_products.html">PRODUCTS</a></li>
+                                       <li><a href="institutes_users.html">USERS</a></li>
+                                       <li><a href="institutes_supervisors.html">SUPERVISORS</a></li>
+                                       <li><a href="institutes_teachers.html">TEACHERS</a></li>
+                                       <li><a href="institutes_students.html">STUDENTS</a></li>
                                    </ul>
                                </div>
                            </div>
@@ -1289,15 +1287,15 @@
                            <div class="single-footer-caption mb-50">
                                <div class="footer-tittle">
                                    <h4>UNIVERSITIES</h4>
-                                   <ul>
-                                    <li><a href="universities.examinations.html">Examinations</a></li>
-                                    <li><a href="universities.systems.html">Systems</a></li>
-                                    <li><a href="universities_services.html">Services</a></li>
-                                    <li><a href="universities_products.html">Products</a></li>
-                                    <li><a href="universities_users.html">Users</a></li>
-                                    <li><a href="universities_supervisors.html">Supervisors</a></li>
-                                    <li><a href="universities_teachers.html">Teachers</a></li>
-                                    <li><a href="universities_students.html">Students</a></li>
+                                   <ul> 
+                                       <li><a href="universities.examinations.html">EXAMINATIONS</a></li>
+                                       <li><a href="universities.systems.html">SYSTEMS</a></li>
+                                       <li><a href="universities_services.html">SERVICES</a></li>
+                                       <li><a href="universities_products.html">PRODUCTS</a></li>
+                                       <li><a href="universities_users.html">USERS</a></li>
+                                       <li><a href="universities_supervisors.html">SUPERVISORS</a></li>
+                                       <li><a href="universities_teachers.html">TEACHERS</a></li>
+                                       <li><a href="universities_students.html">STUDENTS</a></li>
                                    </ul>
                                </div>
                            </div>
@@ -1313,7 +1311,7 @@
                            <div class="col-xl-12 ">
                                <div class="footer-copy-right text-center">
                                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.  All rights reserved -->
-                                     Copyright &copy;<script>document.write(new Date().getFullYear());</script> Maandeeq
+                                     Copyright &copy;<script>document.write(new Date().getFullYear());</script> MAANDEEQ
                                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                    </p>
                                  </div>
@@ -1324,7 +1322,7 @@
              </div>
              <!-- Footer End-->
          </div>
-     </footer>  
+     </footer>    
   <!-- Scroll Up -->
   <div id="back-top" >
     <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
