--- a/archives.html
+++ b/archives.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>DOWNLOADS SYSTEMS</title>
+    <title>ARCHIVES SYSTEMS</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -129,10 +129,9 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-7 col-md-12">
                                 <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED NATIONAL EDUCATIONAL <br> MANAGEMENT INFORMATION DOWNLOADS</h1>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED NATIONAL EDUCATIONAL <br> MANAGEMENT INFORMATION ARCHIVES</h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;">
-                                        Online systems are the best tool to manage educational
-                                        institutions efficiently and effectively.
+                                       
                                     </P>
                                     <!-- <a href="Request.html" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Request</a> -->
                                     <!-- <li class="button-header"><a href="Request.html" class="btn btn3">Request</a></li> -->
@@ -325,7 +324,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>ARABIC</h2>
-                            <h2>DOWNLOADS</h2>
+                            <h2>ARCHIVES</h2>
                         </div>
                     </div>
                 </div>
@@ -762,7 +761,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                              <h2>ENGLISH</h2>
-                            <h2>DOWNLOADS</h2>
+                            <h2>ARCHIVES</h2>
                         </div>
                     </div>
                 </div>
@@ -1193,6 +1192,7 @@
                     <!-- Single -->
                 </div>
             </div>
+
         </div>
 
 
