--- a/arabic_archives.html
+++ b/arabic_archives.html
@@ -131,8 +131,7 @@
                                 <div class="hero__caption">
                                     <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED ARABIC EDUCATIONAL <br> MANAGEMENT INFORMATION DOWNLOADS</h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;">
-                                        Online systems are the best tool to manage educational
-                                        institutions efficiently and effectively.
+                                        
                                     </P>
                                     <!-- <a href="Request.html" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Request</a> -->
                                     <!-- <li class="button-header"><a href="Request.html" class="btn btn3">Request</a></li> -->
@@ -354,7 +353,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                        <div class="price">
-                                           <!--  <!-- <span>$135</span>-->-->
+                                            <!-- <span>$135</span>-->-->
                                         </div>
                                     </div>
                                     <a href="#" class="border-btn border-btn2">VERSIONS</a>
