--- a/arabic_archives.html
+++ b/arabic_archives.html
@@ -353,7 +353,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                        <div class="price">
-                                            <!-- <span>$135</span>-->-->
+                                            <!-- <span>$135</span>-->
                                         </div>
                                     </div>
                                     <a href="#" class="border-btn border-btn2">VERSIONS</a>
