--- a/arabic_home.html
+++ b/arabic_home.html
@@ -2096,7 +2096,7 @@
       
         
     </main>
-    <footer>
+   <footer>
         <div class="footer-wrappper footer-bg ">
            <!-- Footer Start-->
            <div class="footer-area footer-padding">
@@ -2189,7 +2189,7 @@
                            <div class="col-xl-12 ">
                                <div class="footer-copy-right text-center">
                                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.  All rights reserved -->
-                                     Copyright &copy;<script>document.write(new Date().getFullYear());</script> MAANDEEQ
+                                     COPYRIGHT &copy;<script>document.write(new Date().getFullYear());</script> MAANDEEQ
                                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                    </p>
                                  </div>
@@ -2200,7 +2200,7 @@
              </div>
              <!-- Footer End-->
          </div>
-     </footer>   
+     </footer>    
   <!-- Scroll Up -->
   <div id="back-top" >
     <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
