--- a/arabic_products.html
+++ b/arabic_products.html
@@ -844,7 +844,7 @@
                            <div class="col-xl-12 ">
                                <div class="footer-copy-right text-center">
                                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.  All rights reserved -->
-                                     Copyright &copy;<script>document.write(new Date().getFullYear());</script> MAANDEEQ
+                                     COPYRIGHT &copy;<script>document.write(new Date().getFullYear());</script> MAANDEEQ
                                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                    </p>
                                  </div>
