--- a/exams.html
+++ b/exams.html
@@ -2095,7 +2095,7 @@
       
         
     </main>
-    <footer>
+   <footer>
         <div class="footer-wrappper footer-bg ">
            <!-- Footer Start-->
            <div class="footer-area footer-padding">
@@ -2188,7 +2188,7 @@
                            <div class="col-xl-12 ">
                                <div class="footer-copy-right text-center">
                                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.  All rights reserved -->
-                                     Copyright &copy;<script>document.write(new Date().getFullYear());</script> MAANDEEQ
+                                     COPYRIGHT &copy;<script>document.write(new Date().getFullYear());</script> MAANDEEQ
                                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                    </p>
                                  </div>
