--- a/contactus.html
+++ b/contactus.html
@@ -453,110 +453,110 @@
     <!-- Header End -->
 
    <footer>
-    <div class="footer-wrappper footer-bg">
-       <!-- Footer Start-->
-       <div class="footer-area footer-padding">
-           <div class="container">
-               <div class="row justify-content-between">
-                   <div class="col-xl-4 col-lg-5 col-md-4 col-sm-6">
-                       <div class="single-footer-caption mb-50">
-                           <div class="single-footer-caption mb-30">
-                               <!-- logo -->
-                               <div class="footer-logo mb-25">
-                                   <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
-                               </div>
-                               <div class="footer-tittle">
-                                   <div class="footer-pera">
-                                       <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;font-size: medium;">
-                                           Online systems are the best tool to manage educational institutions efficiently and effectively.
-                                       </p>
+        <div class="footer-wrappper footer-bg ">
+           <!-- Footer Start-->
+           <div class="footer-area footer-padding">
+               <div class="container">
+                   <div class="row justify-content-between">
+                       <div class="col-xl-4 col-lg-5 col-md-4 col-sm-6">
+                           <div class="single-footer-caption mb-50">
+                               <div class="single-footer-caption mb-30">
+                                   <!-- logo -->
+                                   <div class="footer-logo mb-25">
+                                       <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                   </div>
+                                   <div class="footer-tittle">
+                                       <div class="footer-pera">
+                                           <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;font-size: medium;">
+                                               ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                           </p>
+                                       </div>
+                                   </div>
+                                   <!-- social -->
+                                   <div class="footer-social">
+                                       <a href="#"><i class="fab fa-youtube"></i></a>
+                                       <a href="#"><i class="fab fa-facebook"></i></a>
+                                       <a href="#"><i class="fab fa-github"></i></a>
+                                       <a href="#"><i class="fab fa-telegram"></i></a>
+                                       <a href="#"><i class="fab fa-whatsapp"></i></a>
                                    </div>
                                </div>
-                               <!-- social -->
-                               <div class="footer-social">
-                                   <a href="#"><i class="fab fa-youtube"></i></a>
-                                   <a href="#"><i class="fab fa-facebook"></i></a>
-                                   <a href="#"><i class="fab fa-github"></i></a>
-                                   <a href="#"><i class="fab fa-telegram"></i></a>
-                                   <a href="#"><i class="fab fa-whatsapp"></i></a>
+                           </div>
+                       </div>
+                       <div class="col-xl-2 col-lg-3 col-md-4 col-sm-5">
+                           <div class="single-footer-caption mb-50">
+                               <div class="footer-tittle">
+                                   <h4>SCHOOLS</h4>
+                                   <ul> 
+                                       <li><a href="schools.examinations.html">EXAMINATIONS</a></li>
+                                       <li><a href="schools.systems.html">SYSTEMS</a></li>
+                                       <li><a href="schools_services.html">SERVICES</a></li>
+                                       <li><a href="schools_products.html">PRODUCTS</a></li>
+                                       <li><a href="schools_users.html">USERS</a></li>
+                                       <li><a href="schools_supervisors.html">SUPERVISORS</a></li>
+                                       <li><a href="schools_teachers.html">TEACHERS</a></li>
+                                       <li><a href="schools_students.html">STUDENTS</a></li>
+                                   </ul>
                                </div>
                            </div>
                        </div>
-                   </div>
-                   <div class="col-xl-2 col-lg-3 col-md-4 col-sm-5">
-                       <div class="single-footer-caption mb-50">
-                           <div class="footer-tittle">
-                               <h4>SCHOOLS</h4>
-                               <ul>
-                                   <li><a href="schools.examinations.html">Examinations</a></li>
-                                   <li><a href="schools.systems.html">Systems</a></li>
-                                   <li><a href="schools_services.html">Services</a></li>
-                                   <li><a href="schools_products.html">Products</a></li>
-                                   <li><a href="schools_users.html">Users</a></li>
-                                   <li><a href="schools_supervisors.html">Supervisors</a></li>
-                                   <li><a href="schools_teachers.html">Teachers</a></li>
-                                   <li><a href="schools_students.html">Students</a></li>
-                               </ul>
+                       <div class="col-xl-2 col-lg-4 col-md-4 col-sm-6">
+                           <div class="single-footer-caption mb-50">
+                               <div class="footer-tittle">
+                                   <h4>INSTITUTES</h4>
+                                   <ul> 
+                                       <li><a href="institutes.examinations.html">EXAMINATIONS</a></li>
+                                       <li><a href="institutes.systems.html">SYSTEMS</a></li>
+                                       <li><a href="institutes_services.html">SERVICES</a></li>
+                                       <li><a href="institutes_products.html">PRODUCTS</a></li>
+                                       <li><a href="institutes_users.html">USERS</a></li>
+                                       <li><a href="institutes_supervisors.html">SUPERVISORS</a></li>
+                                       <li><a href="institutes_teachers.html">TEACHERS</a></li>
+                                       <li><a href="institutes_students.html">STUDENTS</a></li>
+                                   </ul>
+                               </div>
                            </div>
                        </div>
-                   </div>
-                   <div class="col-xl-2 col-lg-4 col-md-4 col-sm-6">
-                       <div class="single-footer-caption mb-50">
-                           <div class="footer-tittle">
-                               <h4>INSTITUTES</h4>
-                               <ul>
-                                <li><a href="institutes.examinations.html">Examinations</a></li>
-                                <li><a href="institutes.systems.html">Systems</a></li>
-                                <li><a href="institutes_services.html">Services</a></li>
-                                <li><a href="institutes_products.html">Products</a></li>
-                                <li><a href="institutes_users.html">Users</a></li>
-                                <li><a href="institutes_supervisors.html">Supervisors</a></li>
-                                <li><a href="institutes_teachers.html">Teachers</a></li>
-                                <li><a href="institutes_students.html">Students</a></li>
-                               </ul>
-                           </div>
-                       </div>
-                   </div>
-                   <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
-                       <div class="single-footer-caption mb-50">
-                           <div class="footer-tittle">
-                               <h4>UNIVERSITIES</h4>
-                               <ul>
-                                <li><a href="universities.examinations.html">Examinations</a></li>
-                                <li><a href="universities.systems.html">Systems</a></li>
-                                <li><a href="universities_services.html">Services</a></li>
-                                <li><a href="universities_products.html">Products</a></li>
-                                <li><a href="universities_users.html">Users</a></li>
-                                <li><a href="universities_supervisors.html">Supervisors</a></li>
-                                <li><a href="universities_teachers.html">Teachers</a></li>
-                                <li><a href="universities_students.html">Students</a></li>
-                               </ul>
+                       <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+                           <div class="single-footer-caption mb-50">
+                               <div class="footer-tittle">
+                                   <h4>UNIVERSITIES</h4>
+                                   <ul> 
+                                       <li><a href="universities.examinations.html">EXAMINATIONS</a></li>
+                                       <li><a href="universities.systems.html">SYSTEMS</a></li>
+                                       <li><a href="universities_services.html">SERVICES</a></li>
+                                       <li><a href="universities_products.html">PRODUCTS</a></li>
+                                       <li><a href="universities_users.html">USERS</a></li>
+                                       <li><a href="universities_supervisors.html">SUPERVISORS</a></li>
+                                       <li><a href="universities_teachers.html">TEACHERS</a></li>
+                                       <li><a href="universities_students.html">STUDENTS</a></li>
+                                   </ul>
+                               </div>
                            </div>
                        </div>
                    </div>
                </div>
            </div>
-       </div>
-       <!-- footer-bottom area -->
-       <div class="footer-bottom-area">
-           <div class="container">
-               <div class="footer-border">
-                   <div class="row d-flex align-items-center">
-                       <div class="col-xl-12 ">
-                           <div class="footer-copy-right text-center">
-                               <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.  All rights reserved -->
-                                 Copyright &copy;<script>document.write(new Date().getFullYear());</script> Maandeeq
-                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                               </p>
+           <!-- footer-bottom area -->
+           <div class="footer-bottom-area">
+               <div class="container">
+                   <div class="footer-border">
+                       <div class="row d-flex align-items-center">
+                           <div class="col-xl-12 ">
+                               <div class="footer-copy-right text-center">
+                                   <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.  All rights reserved -->
+                                     COPYRIGHT &copy;<script>document.write(new Date().getFullYear());</script> MAANDEEQ
+                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                   </p>
+                                 </div>
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
+             <!-- Footer End-->
          </div>
-         <!-- Footer End-->
-     </div>
-   </footer>  
+     </footer> 
   <!-- Scroll Up -->
   <div id="back-top" >
     <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
